[gd_scene load_steps=6 format=3 uid="uid://yucrlea7h6xt"]

[ext_resource type="Script" path="res://scenes/common/bullet.gd" id="1_7a2v0"]
[ext_resource type="Texture2D" uid="uid://ck8w0t3sk64g0" path="res://assets/created/bullet.png" id="1_tx47s"]
[ext_resource type="PackedScene" uid="uid://23j52gwexeqt" path="res://scenes/common/explosion.tscn" id="3_7gdep"]
[ext_resource type="PackedScene" uid="uid://d4enxlrlu02te" path="res://scenes/common/melee_explosion.tscn" id="4_06rh0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l3fcm"]
size = Vector2(2, 2)

[node name="bullet" type="Sprite2D"]
scale = Vector2(2, 2)
script = ExtResource("1_7a2v0")

[node name="visual_bullet" type="Sprite2D" parent="."]
texture = ExtResource("1_tx47s")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="ExplotionRect" type="ColorRect" parent="Area2D"]
visible = false
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0
color = Color(0.796078, 0.305882, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_l3fcm")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -1.0
offset_top = -1.0
offset_right = 1.0
offset_bottom = 1.0

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, -5.96046e-08)
scale = Vector2(0.1, 0.1)

[node name="explosion" parent="." instance=ExtResource("3_7gdep")]
visible = false

[node name="boleadora" parent="." instance=ExtResource("4_06rh0")]
visible = false
scale = Vector2(1.25, 1.25)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
